--- a/css/styles.css
+++ b/css/styles.css
@@ -34,12 +34,26 @@
 }
 
 /* base*/
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--color-primery-dark);
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
 }
 
 address {
@@ -50,8 +64,29 @@ ul {
   list-style-type: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+section {
+  padding: 48px 0;
+}
+
+.containar {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
 /* Button */
 .button {
+  padding: 16px 32px;
   color: var(--color-primery-light);
   font-weight: 600;
   background-color: var(--color-brand-light);
@@ -77,7 +112,12 @@ ul {
 }
 
 /* Hero section */
+.hero-section {
+  padding: 272px 0;
+}
+
 .hero-title {
+  margin-bottom: 0;
   color: var(--color-primery-light);
   text-align: center;
   font-size: 128px;
@@ -109,6 +149,12 @@ ul {
 }
 
 /* traditions-text */
+.traditions-section {
+  padding-top: 96px;
+}
+.traditions-title {
+  margin-bottom: 42px;
+}
 .traditions-text .brand {
   color: var(--color-brand-light);
   font-weight: 600;
@@ -119,11 +165,19 @@ ul {
 
 /* Chefs section */
 .chefs-title {
+  margin-bottom: 80px;
+}
+
+.chef-title {
+  margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
 }
 
 /* Format section */
+.formats-title {
+  margin-bottom: 80px;
+}
 .format-title {
   font-size: 24px;
   font-weight: 600;
@@ -133,6 +187,11 @@ ul {
 .format-text {
   font-size: 14px;
   font-weight: 300;
+}
+
+/* Contact section */
+.contact-title {
+  margin-bottom: 16px;
 }
 
 /* Footer */
