--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ address {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -108,12 +110,32 @@ section {
 
 .link:hover {
   color: var(--color-brand-light);
-  font-weight: 600;
+}
+
+/* Header */
+.header-containar {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 /* Hero section */
 .hero-section {
   padding: 272px 0;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 .hero-title {
@@ -129,11 +151,18 @@ section {
 }
 
 /* Advantages section */
-.advantages-list {
-  color: var(--color-primery-light);
+.advantages-section {
+  padding: 16px 0;
   background-color: var(--color-brand-light);
 }
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
 .advantages-item {
+  color: var(--color-primery-light);
   font-size: 20px;
   font-weight: 300;
 }
@@ -148,10 +177,20 @@ section {
   color: var(--color-brend-dark);
 }
 
-/* traditions-text */
+/* Traditions-text */
 .traditions-section {
   padding-top: 96px;
 }
+
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+.traditions-content {
+  max-width: 710px;
+}
+
 .traditions-title {
   margin-bottom: 42px;
 }
@@ -161,6 +200,9 @@ section {
 }
 .traditions-text .uppercase {
   text-transform: uppercase;
+}
+.traditions-text.limited {
+  max-width: 360px;
 }
 
 /* Chefs section */
@@ -175,6 +217,21 @@ section {
 }
 
 /* Format section */
+.format-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.format-item {
+  flex-basis: calc((100% - 40px) / 3);
+}
+
+.format-card {
+  padding: 24px;
+  border: 1px solid lightgray;
+  border-radius: 16px;
+}
+
 .formats-title {
   margin-bottom: 80px;
 }
