--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,10 @@
 :root {
   --color-primery-dark: #31261a;
   --color-primery-light: #faf4ea;
-  --color-brand-light: #819b57;
+  --color-secondary-dark: #a18268;
+  --color-brand-normal: #819b57;
   --color-brend-dark: #465929;
+  --color-brand-light: #cfcfbc;
 }
 
 /* base*/
@@ -40,6 +42,7 @@
 
 body {
   color: var(--color-primery-dark);
+  background-color: var(--color-primery-light);
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -91,8 +94,8 @@ section {
   padding: 16px 32px;
   color: var(--color-primery-light);
   font-weight: 600;
-  background-color: var(--color-brand-light);
-  border: 2px solid var(--color-brand-light);
+  background-color: var(--color-brand-normal);
+  border: 2px solid var(--color-brand-normal);
   border-radius: 8px;
   cursor: pointer;
 }
@@ -109,7 +112,7 @@ section {
 }
 
 .link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 /* Header */
@@ -122,6 +125,10 @@ section {
 /* Hero section */
 .hero-section {
   padding: 272px 0;
+  background-image: url('../images/hero-section-background.jpg');
+  background-repeat: no-repeat;
+  background-position: center top;
+  block-size: cover;
 }
 
 .header-nav {
@@ -147,13 +154,13 @@ section {
 }
 
 .hero-title .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 /* Advantages section */
 .advantages-section {
   padding: 16px 0;
-  background-color: var(--color-brand-light);
+  background-color: var(--color-brand-normal);
 }
 
 .advantages-list {
@@ -173,6 +180,9 @@ section {
   line-height: 1.3;
 }
 
+.section-title.centered {
+  text-align: center;
+}
 .section-title .accent {
   color: var(--color-brend-dark);
 }
@@ -195,7 +205,7 @@ section {
   margin-bottom: 42px;
 }
 .traditions-text .brand {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   font-weight: 600;
 }
 .traditions-text .uppercase {
@@ -207,7 +217,21 @@ section {
 
 /* Chefs section */
 .chefs-title {
-  margin-bottom: 80px;
+  max-width: 520px;
+  margin: 0 auto 80px;
+}
+.chefs-title::before,
+.chefs-title::after {
+  display: block;
+  width: 352px;
+  border: 2px solid var(--color-brand-light);
+  content: '';
+}
+
+.chef-photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primery-light),
+    -16px 16px 0 2px var(--color-secondary-dark);
 }
 
 .chef-title {
@@ -227,7 +251,15 @@ section {
 }
 
 .format-card {
+  height: 444px;
   padding: 24px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primery-dark) 100%
+  );
+
   border: 1px solid lightgray;
   border-radius: 16px;
 }
@@ -260,9 +292,16 @@ section {
 }
 
 .address-link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 .address-copyright {
   font-size: 14px;
+}
+.footer {
+  background-color: var(--color-primery-dark);
+  background-image: url('../images/footer-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
